# sodaCat

./: .gitignore  CLAUDE.md  CMakeLists.txt  GpTimer_comparison.md  LICENSE  README.md  SVD-conversion.md
.github/workflows/: chip-models.yml  clock-spec.yml  peripheral-models.yml
cmake/: esp32-extraction.cmake  lpc-extraction.cmake  mcx-extraction.cmake  microchip-extraction.cmake  raspberry-extraction.cmake  sodaCat.cmake  stm32-extraction.cmake  stm32c0-extraction.cmake  stm32f3-extraction.cmake  stm32f4-extraction.cmake  stm32f7-extraction.cmake  stm32g0-extraction.cmake  stm32g4-extraction.cmake  stm32h5-extraction.cmake  stm32h7-extraction-example.cmake  stm32h7-extraction.cmake  stm32l0-extraction.cmake  stm32l1-extraction.cmake  stm32l4-extraction.cmake  stm32l4plus-extraction.cmake  stm32l5-extraction.cmake  stm32n6-extraction.cmake  stm32u0-extraction.cmake  stm32u3-extraction.cmake  stm32u5-extraction.cmake
data/NXP/: processLPC8.py
data/Raspberry/: processRP2040.py  processRP2350.py
data/ST/: processSTM32H757.py
data/TI/: Readme.md
docs/: index.md
docs/ST/: GpTimer_comparison.md  STM32C5-analysis.md  USART_comparison.md
docs/design/: ARRAY_TRANSFORMATION_ANALYSIS.md  BLOCK_SOURCE_SELECTION_DESIGN.md  IMPLEMENTATION_SUMMARY.md  REFINEMENTS.md  cross-vendor-ip.md  multicpu-chip-refactor.md  stm32-shared-blocks.md
docs/overview/: DELIVERABLES.md  PROJECT_STATUS.md  QUICK_REFERENCE.md
docs/stm32h7/: ANALYSIS_STM32H7_COMPATIBILITY.md  IMPLEMENTATION_GUIDE.md  QUICKSTART_STM32H7.md  README_STM32H7_EXTRACTION.md
docs/tasks/: clock-tree-task.md  pin-list-task.md
docs/transformation-framework/: GENERIC_TRANSFORMATION_DELIVERY.md  GENERIC_TRANSFORMATION_FRAMEWORK.md  TRANSFORMATION_EXTENSION_GUIDE.md  TRANSFORMATION_IMPLEMENTATION_CHECKLIST.md
extractors/: LPC8.py  README.md  RP2350.py  SAMV71.py  STM32.yaml  STM32C031.py  STM32H757_template.py  convert_to_blocks.py  generate_lpc_models.py  generate_models.py  generate_stm32_models.py  generate_stm32c0_models.py  generate_stm32f3_models.py  generate_stm32f4_models.py  generate_stm32f7_models.py  generate_stm32g0_models.py  generate_stm32g4_models.py  generate_stm32h5_models.py  generate_stm32h7_models.py  generate_stm32l0_models.py  generate_stm32l1_models.py  generate_stm32l4_models.py  generate_stm32l4plus_models.py  generate_stm32l5_models.py  generate_stm32n6_models.py  generate_stm32u0_models.py  generate_stm32u3_models.py  generate_stm32u5_models.py  stm32h7-transforms.yaml  stm32h7_transforms.py
extractors/families/: C0.yaml  F3.yaml  F4.yaml  F7.yaml  G0.yaml  G4.yaml  H5.yaml  H7.yaml  L0.yaml  L1.yaml  L4.yaml  L4P.yaml  L5.yaml  N6.yaml  U0.yaml  U3.yaml  U5.yaml
extractors/vendors/: esp.py  lpc.py  mcx.py  microchip.py  raspberry.py  stm32.py
generators/: README.md  generate_stm32h7_models.py  headerPer.py
generators/c/: README.md
generators/cxx/: README.md  array.hpp  clocktree.cppm  clocktree.hpp  generate_chip_header.py  generate_clocktree_header.py  generate_header.py  generate_peripheral_header.py  headerPer.py  hwreg.cppm  hwreg.hpp  registers.hpp
generators/svd/: generate_svd.py
models/ARM/: CMSDK_DualTimer.yaml  CMSDK_GPIO.yaml  CMSDK_Timer.yaml  CMSDK_UART.yaml  CMSDK_Watchdog.yaml  CoreDebug.yaml  DWT.yaml  FPGA_IO.yaml  FPU.yaml  I2S.yaml  ITM.yaml  MPC.yaml  MPU_V7M.yaml  MPU_V8M.yaml  NSPC.yaml  NVIC.yaml  PL022.yaml  PL080.yaml  PL081.yaml  PL08x.yaml  PL180.yaml  SAU.yaml  SBCon.yaml  SCB.yaml  SCC.yaml  SCnSCB.yaml  SPC.yaml  SysTick.yaml  TPI.yaml
models/H757/: ADC_Common.yaml  ART.yaml  BasicTimer.yaml  DMAMUX2.yaml  GPIO.yaml  GpTimer.yaml  H7_clocks.yaml  MDMA.yaml  QUADSPI.yaml  RCC.yaml  SPI.yaml  SYSCFG.yaml  USART.yaml
models/Microchip/: AC.yaml  ACC.yaml  ADC.yaml  AES.yaml  AFEC.yaml  CAN.yaml  CHIPID.yaml  DACC.yaml  DMA.yaml  DRMTCM.yaml  DSU.yaml  EBI.yaml  EFC.yaml  EIC.yaml  ETH.yaml  EVSYS.yaml  FCR.yaml  FCW.yaml  FREQM.yaml  GCLK.yaml  GMAC.yaml  GPBR.yaml  HSMCI.yaml  I2SC.yaml  ICM.yaml  ISI.yaml  LAN9118.yaml  MATRIX.yaml  MCAN.yaml  MCLK.yaml  MCRAMC.yaml  MLB.yaml  OSC32KCTRL.yaml  OSCCTRL.yaml  PAC.yaml  PIC32CZ_Gen2_clocks.yaml  PIO.yaml  PM.yaml  PMC.yaml  PORT.yaml  (+30 more)
models/NXP/: CRC.yaml  CTIMER.yaml  GPIO.yaml  I2C.yaml  LCD.yaml  MRT.yaml  PINT.yaml  SCT.yaml  SPIFI.yaml  SmartDMA.yaml  USART.yaml  UTICK.yaml  WWDT.yaml
models/NXP-legacy/: ADC.yaml  CRC.yaml  I2C.yaml  MRT.yaml  PINT.yaml  SPI.yaml  SmartDMA.yaml  USART.yaml
models/Raspberry/: ADC.yaml  BUSCTRL.yaml  CLOCKS.yaml  DMA.yaml  I2C.yaml  IO_BANK0.yaml  IO_QSPI.yaml  PADS_BANK0.yaml  PADS_QSPI.yaml  PIO.yaml  PLL.yaml  PPB.yaml  PSM.yaml  PWM.yaml  RESETS.yaml  ROSC.yaml  SIO.yaml  SPI.yaml  SYSCFG.yaml  SYSINFO.yaml  TBMAN.yaml  TIMER.yaml  UART.yaml  USB.yaml  USB_DPRAM.yaml  WATCHDOG.yaml  XIP_CTRL.yaml  XOSC.yaml
parsers/: LPC43.py  LPC54S018.py  LPC8.py  RP2040.py  STM32C031.py  STM32H757.py  STM32H757_template.py  processLPC8.py  processSAMV71.py  processSTM32H757.py  processiMX.py
schemas/: README.md  chip.schema.yaml  clock-tree-schema.yaml  clock-tree.schema.json  clock-tree.schema.yaml  peripheral.schema.yaml
skills/: SKILL.md
svd/: CMakeLists.txt  STM32H757_CM4.svd  SVD_ERRATA.md
svd/NXP/: CMakeLists.txt  LPC.yaml  LPC865.svd  MCX.yaml  README.md  SVD_ERRATA.md
tasks/: README.md  add-new-vendor.md  clock-tree-task-ST.md  clock-tree-task.md  compare-svd.md  namespace-change.md  nxp-reference-manual-tracking.md  pin-list-task.md  rm-cross-check.md  shared-block-unification.md  stm32-svd-update.md  two-phase-extraction.md  verification-spec.md
test/: CMakeLists.txt  main.cpp  registers.cpp  registers.hpp
tools/: CMakeLists.txt  README.md  check_nxp_manuals.py  compare_peripherals.py  convert_st_pinlist.py  download_stm32_svds.py  enum_namer.py  generate_clocktree_header.py  generic_transform.py  headerChip.py  headerPer.py  pdf_diagram_extractor.py  pdf_table_extractor.py  selfcheck_clock_tree.sh  st_maintenance.py  svd.py  transform.py  validate_chips.py  validate_clock_specs.py  validate_clocks.py  validate_lib.py  validate_peripherals.py
(+3247 files in other folders)
