# CMake file for sodaCat test project
cmake_minimum_required(VERSION 3.28)

option(FOR_MODULES "Build with C++20 modules support" OFF)
if(FOR_MODULES)
    set(FILE_SET_TYPE CXX_MODULES)
    message(STATUS "Building with C++20 modules support")
else()
    set(FILE_SET_TYPE HEADERS)
    message(STATUS "Building without C++20 modules support")
endif()

set(CMAKE_CXX_STANDARD 20)

set(SODACAT_LOCAL_DIR "${CMAKE_SOURCE_DIR}/models")
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(sodaCat)

add_library(soc-data-modules OBJECT)
target_include_directories(soc-data-modules PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_SOURCE_DIR}/generators/cxx)
target_compile_definitions(soc-data-modules PUBLIC $<$<BOOL:${FOR_MODULES}>:REGISTERS_MODULE>)
set_target_properties(soc-data-modules PROPERTIES
    CXX_SCAN_FOR_MODULES ${FOR_MODULES}
    LINKER_LANGUAGE "CXX"
)

generate_header(soc-data-modules generate_chip_header stm32h7 ST/H7/H745_H757/STM32H757_CM7 .hpp)

# Cross-family shared blocks
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/GpTimer .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/LPUART .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/USART .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/WWDG .hpp)

# Subfamily-specific blocks (H745_H757)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/H745_H757/DBGMCU .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/H745_H757/Flash .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/H745_H757/HSEM .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/H745_H757/RCC .hpp)

# Family-level shared blocks (H7)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/ADC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/ADC_Common .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/AdvCtrlTimer .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/ART .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/AXI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/BasicTimer .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/BDMA .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/CAN_CCU .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/CEC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/COMP .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/CRC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/CRS .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/CRYP .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/DAC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/DCMI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/DFSDM .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/DMA .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/DSIHOST .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/EXTI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/Ethernet_MAC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/FDCAN .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/FMC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/GPIO .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/HASH .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/HRTIM_Common .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/HRTIM_Master .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/HRTIM_Timer .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/I2C .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/IWDG .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/JPEG .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/LPTIM .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/LTDC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/MDIOS .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/MDMA .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/HSOPAMP .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/OTG_HS_DEVICE .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/OTG_HS_GLOBAL .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/OTG_HS_HOST .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/OTG_HS_PWRCLK .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/PWR .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/QUADSPI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/RAMECC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/RNG .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/RTC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SAI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SDMMC .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SPDIFRX .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SPI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SWPMI .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/SYSCFG .hpp)
generate_header(soc-data-modules generate_peripheral_header stm32h7 ST/H7/VREFBUF .hpp)

generate_header(soc-data-modules generate_peripheral_header stm32h7 ARM/NVIC .hpp)

add_executable(soc-data-test main.cpp)
target_link_libraries(soc-data-test PRIVATE soc-data-modules)
target_compile_options(soc-data-test PUBLIC $<$<BOOL:${FOR_MODULES}>:-fmodules-ts>)
