# CMake file for sodaCat test project
cmake_minimum_required(VERSION 3.28)

option(FOR_MODULES "Build with C++20 modules support" OFF)
if(FOR_MODULES)
    set(FILE_SET_TYPE CXX_MODULES)
    message(STATUS "Building with C++20 modules support")
else()
    set(FILE_SET_TYPE HEADERS)
    message(STATUS "Building without C++20 modules support")
endif()

set(CMAKE_CXX_STANDARD 20)

set(SODACAT_LOCAL_DIR "${CMAKE_SOURCE_DIR}/models")
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(sodaCat)
sodacat_fetch_generator(cxx)

add_library(soc-data-modules OBJECT)
target_include_directories(soc-data-modules PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${SODACAT_GENERATOR_CXX})
set_target_properties(soc-data-modules PROPERTIES
    CXX_SCAN_FOR_MODULES ${FOR_MODULES}
    LINKER_LANGUAGE "CXX"
)

generate_header(soc-data-modules cxx stm32h7 ST/H7/H745_H757/STM32H757_CM7 .hpp)

# Cross-family shared blocks
generate_header(soc-data-modules cxx stm32h7 ST/BasicTimer .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/CEC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/CRC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/CRS .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/DCMI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/GPIO .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/HSOPAMP .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/I2C .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/LegacySPI .hpp)
generate_header(soc-data-modules cxx stm32l5 ST/USB_DEV .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/LPTIM .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/MDIOS .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/ModernSPI .hpp)
generate_header(soc-data-modules cxx stm32h5 ST/USB_DRD .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/OTG .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/QUADSPI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/SAI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/SPDIFRX .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/TimerV1 .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/TimerV2 .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/USART .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/WWDG .hpp)

# Subfamily-specific blocks (H745_H757)
generate_header(soc-data-modules cxx stm32h7 ST/H7/ART .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/H745_H757/DBGMCU .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/DSIHOST .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/H745_H757/Flash .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/H745_H757/HSEM .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/H745_H757/RCC .hpp)

# Family-level shared blocks (H7)
generate_header(soc-data-modules cxx stm32h7 ST/H7/ADC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/ADC_Common .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/AXI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/BDMA .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/CAN_CCU .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/COMP .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/CRYP .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/DAC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/DFSDM .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/DMA .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/EXTI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/ETH .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/FDCAN .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/FMC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/HASH .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/HRTIM .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/IWDG .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/JPEG .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/LTDC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/MDMA .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/PWR .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/RAMECC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/RNG .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/RTC_V1 .hpp)
generate_header(soc-data-modules cxx stm32u3 ST/RTC_V2 .hpp)
generate_header(soc-data-modules cxx stm32f4 ST/SDIO .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/SDMMC .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/SWPMI .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/H7/SYSCFG .hpp)
generate_header(soc-data-modules cxx stm32h7 ST/VREFBUF .hpp)

generate_header(soc-data-modules cxx stm32h7 ARM/NVIC .hpp)

# Microchip SAME70 — exercises the clock-tree code path
# (the chip's `clocktree:` key pulls in SAM_Gen1_clocks alongside the chip).
generate_header(soc-data-modules cxx microchip Microchip/SAME70/SAME70/ATSAME70Q21B .hpp)

# ESP32-P4
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ESP32_P4/ESP32-P4 .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ADC .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/AES .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/AHB_DMA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ASSIST_DEBUG .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/AXI_DMA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/AXI_ICM .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/BITSCRAMBLER .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/CACHE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/DMA2D .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/DS .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ECC .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ECDSA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/EFUSE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/GPIO .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/GPIO_SD .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/H264 .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/H264_DMA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/HMAC .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/HP_SYS .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/HP_SYS_CLKRST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/I2C .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/I2S .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/I3C_MST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/I3C_MST_MEM .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/I3C_SLV .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/INTERRUPT_CORE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/IO_MUX .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/ISP .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/JPEG .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LCD_CAM .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LEDC .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_ADC .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_ANA_PERI .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_AON_CLKRST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_GPIO .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_HUK .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_I2C .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_I2C_ANA_MST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_I2S .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_INTR .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_IO_MUX .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_PERI .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_SYS .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_TIMER .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_TOUCH .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_TSENS .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_UART .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/LP_WDT .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/MCPWM .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/MIPI_CSI_BRIDGE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/MIPI_CSI_HOST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/MIPI_DSI_BRIDGE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/MIPI_DSI_HOST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PARL_IO .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PAU .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PCNT .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PMU .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PPA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/PVT .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/RMT .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/RSA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SDHOST .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SHA .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SOC_ETM .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SPI .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SpiMem .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/SYSTIMER .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/TIMG .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/TRACE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/TWAI .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/UART .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/UHCI .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/USB_DEVICE .hpp)
generate_header(soc-data-modules cxx esp32p4 ESP/P4/USB_WRAP .hpp)

add_executable(soc-data-test main.cpp)
target_link_libraries(soc-data-test PRIVATE soc-data-modules)
target_compile_definitions(soc-data-test PRIVATE $<$<BOOL:${FOR_MODULES}>:REGISTERS_MODULE>)
target_compile_options(soc-data-test PUBLIC $<$<BOOL:${FOR_MODULES}>:-fmodules-ts>)
